...
            ACTION_STOP -> stopStreamingForeground()
        }
        return START_STICKY
    }

    private fun startStreamingForeground(url: String?, includeAudio: Boolean) {
        val message = if (!url.isNullOrEmpty()) {
            if (includeAudio) getString(R.string.streaming_video_and_audio_to, url) else getString(R.string.streaming_to, url)
        } else {
            if (includeAudio) getString(R.string.streaming_camera_with_audio) else getString(R.string.streaming_camera)
        }
        val notification = buildNotification(message)
        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.Q) {
...
